# bilby

./: .gitignore  CMakeLists.txt  LICENSE  README.md  scratch.txt
docs/: assumptions.md  language.md
src/: CMakeLists.txt  backend.cpp  backend.hpp  cli-options.cpp  cli-options.hpp  macros.cpp  macros.hpp  main.cpp  parser.cpp  parser.hpp  types.cpp  types.hpp
test/: cornucopia.bil  first.bil  normal-code.bil  parentheses.bil  sdl2.bil
